[project]
name = "crypto-matching-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "fastapi[standard]>=0.119.0",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
]

[build-system]
requires = ["setuptools>=80.9.0", "wheel", "pybind11>=3.0.1"]
build-backend = "setuptools.build_meta"
